[package]
name = "clementine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["cookies", "blocking"] }
url = "2.3.1"
reqwest_cookie_store = "0.4.0"
thiserror = "1.0.35"
 
