[package]
name = "clementine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", features = ["cookies", "blocking"] }
url = "2"
reqwest_cookie_store = "0.8"
thiserror = "2"
time = "0.3.37"
 
